--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "example": "^0.0.0",
     "gatsby": "^2.30.1",
     "gatsby-craeft-dev-theme": "*",
+    "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-ts-config": "^1.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
