--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@kowalevski/gatsby-midnight-theme": "*",
+    "canvas": "^2.8.0",
     "gatsby": "^2.30.1",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
