--- a/gatsby-midnight-theme/package.json
+++ b/gatsby-midnight-theme/package.json
@@ -1,46 +1,49 @@
 {
   "name": "@kowalevski/gatsby-midnight-theme",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "main": "index.js",
   "author": "Max Kowalevski <me@kowalevski.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/mdx-js__react": "^1.5.3",
-    "@types/node": "^14.14.20",
-    "@types/react-helmet": "^6.1.0",
+    "@types/mdx-js__react": "1.5.3",
+    "@types/node": "14.14.20",
+    "@types/react-helmet": "6.1.0",
     "gatsby": "3.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "typescript": "^4.1.3"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "typescript": "4.1.3"
   },
   "peerDependencies": {
     "gatsby": "3.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@reach/router": "^1.3.4",
-    "gatsby-image": "^2.9.0",
-    "gatsby-plugin-catch-links": "^2.10.0",
-    "gatsby-plugin-feed": "^2.11.0",
-    "gatsby-plugin-mdx": "^1.8.0",
-    "gatsby-plugin-page-creator": "^2.8.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.12.0",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-remark-double-brackets-link": "^0.1.8",
-    "gatsby-remark-double-parenthesis-link": "^0.1.3",
-    "gatsby-remark-images": "^3.9.0",
-    "gatsby-source-filesystem": "^2.9.0",
-    "gatsby-transformer-sharp": "^2.10.0",
-    "mdx-utils": "^0.2.0",
-    "prism-react-renderer": "^1.1.1",
-    "react-github-btn": "^1.2.0",
-    "react-helmet": "^6.1.0",
-    "react-share": "^4.3.1",
-    "slugify": "^1.4.7"
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/react": "1.6.22",
+    "@reach/router": "1.3.4",
+    "canvas": "^2.8.0",
+    "date-fns": "^2.23.0",
+    "gatsby-image": "2.9.0",
+    "gatsby-plugin-catch-links": "2.10.0",
+    "gatsby-plugin-feed": "2.11.0",
+    "gatsby-plugin-mdx": "1.8.0",
+    "gatsby-plugin-page-creator": "2.8.0",
+    "gatsby-plugin-react-helmet": "3.10.0",
+    "gatsby-plugin-sharp": "2.12.0",
+    "gatsby-plugin-sitemap": "2.12.0",
+    "gatsby-plugin-ts-config": "1.1.5",
+    "gatsby-remark-double-brackets-link": "0.1.8",
+    "gatsby-remark-double-parenthesis-link": "0.1.3",
+    "gatsby-remark-images": "3.9.0",
+    "gatsby-remark-social-cards": "^0.4.1",
+    "gatsby-source-filesystem": "2.9.0",
+    "gatsby-transformer-sharp": "2.10.0",
+    "mdx-utils": "0.2.0",
+    "prism-react-renderer": "1.1.1",
+    "react-github-btn": "1.2.0",
+    "react-helmet": "6.1.0",
+    "react-share": "4.3.1",
+    "slugify": "1.4.7"
   }
 }
